// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test blockchain operations Get Block Level 1`] = `
"
        (
            template_id (static_id 0 (\\"all.test.ts\\" 25))
            storage (variant \\"None\\" (unit) (\\"all.test.ts\\" 27))
            storage_type ((option \\"nat\\"))
            messages ((ep1 True False False True (\\"all.test.ts\\" 29) ((set_type (params (\\"all.test.ts\\" 29)) \\"unit\\" (\\"all.test.ts\\" 29)) (set (data) (variant \\"Some\\" (level) (\\"all.test.ts\\" 29)) (\\"all.test.ts\\" 29)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"all.test.ts\\" 25))
        )
        "
`;

exports[`Test blockchain operations Get Block Level 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"option\\",
                \\"args\\": [
                    {
                        \\"prim\\": \\"nat\\"
                    }
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\",
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"CAR\\"
                },
                {
                    \\"prim\\": \\"LEVEL\\"
                },
                {
                    \\"prim\\": \\"SWAP\\"
                },
                {
                    \\"prim\\": \\"DROP\\"
                },
                {
                    \\"prim\\": \\"SOME\\"
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;

exports[`Test blockchain operations Get Chain ID 1`] = `
"
        (
            template_id (static_id 0 (\\"all.test.ts\\" 25))
            storage (variant \\"None\\" (unit) (\\"all.test.ts\\" 27))
            storage_type ((option \\"chain_id\\"))
            messages ((ep1 True False False True (\\"all.test.ts\\" 29) ((set_type (params (\\"all.test.ts\\" 29)) \\"unit\\" (\\"all.test.ts\\" 29)) (set (data) (variant \\"Some\\" (chain_id) (\\"all.test.ts\\" 29)) (\\"all.test.ts\\" 29)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"all.test.ts\\" 25))
        )
        "
`;

exports[`Test blockchain operations Get Chain ID 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"option\\",
                \\"args\\": [
                    {
                        \\"prim\\": \\"chain_id\\"
                    }
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\",
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"CAR\\"
                },
                {
                    \\"prim\\": \\"CHAIN_ID\\"
                },
                {
                    \\"prim\\": \\"SWAP\\"
                },
                {
                    \\"prim\\": \\"DROP\\"
                },
                {
                    \\"prim\\": \\"SOME\\"
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;

exports[`Test blockchain operations Get Sender 1`] = `
"
        (
            template_id (static_id 0 (\\"all.test.ts\\" 25))
            storage (variant \\"None\\" (unit) (\\"all.test.ts\\" 27))
            storage_type ((option \\"address\\"))
            messages ((ep1 True False False True (\\"all.test.ts\\" 29) ((set_type (params (\\"all.test.ts\\" 29)) \\"unit\\" (\\"all.test.ts\\" 29)) (set (data) (variant \\"Some\\" (sender) (\\"all.test.ts\\" 29)) (\\"all.test.ts\\" 29)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"all.test.ts\\" 25))
        )
        "
`;

exports[`Test blockchain operations Get Sender 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"option\\",
                \\"args\\": [
                    {
                        \\"prim\\": \\"address\\"
                    }
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\",
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"DROP\\"
                },
                {
                    \\"prim\\": \\"SENDER\\"
                },
                {
                    \\"prim\\": \\"SOME\\"
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;

exports[`Test blockchain operations Get Source 1`] = `
"
        (
            template_id (static_id 0 (\\"all.test.ts\\" 25))
            storage (variant \\"None\\" (unit) (\\"all.test.ts\\" 27))
            storage_type ((option \\"address\\"))
            messages ((ep1 True False False True (\\"all.test.ts\\" 29) ((set_type (params (\\"all.test.ts\\" 29)) \\"unit\\" (\\"all.test.ts\\" 29)) (set (data) (variant \\"Some\\" (source) (\\"all.test.ts\\" 29)) (\\"all.test.ts\\" 29)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"all.test.ts\\" 25))
        )
        "
`;

exports[`Test blockchain operations Get Source 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"option\\",
                \\"args\\": [
                    {
                        \\"prim\\": \\"address\\"
                    }
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\",
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"DROP\\"
                },
                {
                    \\"prim\\": \\"SOURCE\\"
                },
                {
                    \\"prim\\": \\"SOME\\"
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;

exports[`Test blockchain operations Get Timestamp 1`] = `
"
        (
            template_id (static_id 0 (\\"all.test.ts\\" 25))
            storage (variant \\"None\\" (unit) (\\"all.test.ts\\" 27))
            storage_type ((option \\"timestamp\\"))
            messages ((ep1 True False False True (\\"all.test.ts\\" 29) ((set_type (params (\\"all.test.ts\\" 29)) \\"unit\\" (\\"all.test.ts\\" 29)) (set (data) (variant \\"Some\\" (now) (\\"all.test.ts\\" 29)) (\\"all.test.ts\\" 29)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"all.test.ts\\" 25))
        )
        "
`;

exports[`Test blockchain operations Get Timestamp 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"option\\",
                \\"args\\": [
                    {
                        \\"prim\\": \\"timestamp\\"
                    }
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\",
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"DROP\\"
                },
                {
                    \\"prim\\": \\"NOW\\"
                },
                {
                    \\"prim\\": \\"SOME\\"
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;
